# gerermesaffaires-events

./: README.md  pyproject.toml
examples/daphne/: README.md
examples/uvicorn/: README.md
src/gerermesaffaires_events/: event_emitter.py  server.py
src/gerermesaffaires_events/core/: protocols.py
